--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <li class="header__nav-item">
                     <button class="header__nav-button-close"></button>
                 </li>
-                <li class="header__nav-item"><a href="" class="header__nav-link">Кто я</a></li>
-                <li class="header__nav-item"><a href="" class="header__nav-link">Мои работы</a></li>
-                <li class="header__nav-item"><a href="" class="header__nav-link">Этапы работ</a></a></li>
-                <li class="header__nav-item"><a href="" class="header__nav-link">Услуги и цены</a></li>
-                <li class="header__nav-item"><a href="" class="header__nav-link">Часто задаваемые вопросы</a></li>
-                <li class="header__nav-item"><a href="" class="header__nav-link">Контакты</a></li>
+                <li class="header__nav-item"><a href="#aboutSection" class="header__nav-link">Кто я</a></li>
+                <li class="header__nav-item"><a href="#worksSection" class="header__nav-link">Мои работы</a></li>
+                <li class="header__nav-item"><a href="#stagesSection" class="header__nav-link">Этапы работ</a></a></li>
+                <li class="header__nav-item"><a href="#pricesSection" class="header__nav-link">Услуги и цены</a></li>
+                <li class="header__nav-item"><a href="#faqSection" class="header__nav-link">Часто задаваемые вопросы</a></li>
+                <li class="header__nav-item"><a href="#contactsSection" class="header__nav-link">Контакты</a></li>
             </ul>
             <ul class="header__socials-list">
                 <li class="header__socials-item">
@@ -73,7 +73,7 @@
         </section>
         <section class="about__section">
             <div class="container about__container">
-                <h2 class="h2-style">Кто я</h2>
+                <h2 class="h2-style" id="aboutSection">Кто я</h2>
                 <img src="./images/about-img.png" alt="" class="about__video">
                 <div class="about__text-content-wrapper">
                     <p class="about__text-content">Сложно сказать, почему действия представителей оппозиции представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть ассоциативно распределены по отраслям!</p>
@@ -82,7 +82,7 @@
             </div>
         </section>
         <section class="works__section">
-            <h2 class="h2-style h2-style--blue">Мои работы</h2>
+            <h2 class="h2-style h2-style--blue" id="worksSection">Мои работы</h2>
             <div class="works__container">
                 <img src="./images/works-1-img.jpg" alt="" class="works__img">
                 <img src="./images/works-2-img.jpg" alt="" class="works__img">
@@ -104,7 +104,7 @@
         </section>
         <section class="stages__section">
             <div class="container stages__container">
-                <h2 class="h2-style stages__h2 h2-style--blue">Этапы работы</h2>
+                <h2 class="h2-style stages__h2 h2-style--blue" id="stagesSection">Этапы работы</h2>
                 <ul class="stages__list">
                     <li class="stages__item">
                         <div class="stages__number">01</div>
@@ -136,7 +136,7 @@
         </section>
         <section class="prices__section">
             <div class="container prices__container">
-                <h2 class="h2-style prices__h2">Услуги и цены</h2>
+                <h2 class="h2-style prices__h2" id="pricesSection">Услуги и цены</h2>
                 <ul class="prices__offers-list">
                     <li class="prices__offers-item">
                         <div class="prices__offers-heading prices__offers-heading--1">
@@ -199,7 +199,7 @@
         </section>
         <section class="faq__section">
             <div class="container faq__container">
-                <h2 class="h2-style faq__h2 h2-style--blue">Часто задаваемые вопросы</h2>
+                <h2 class="h2-style faq__h2 h2-style--blue" id="faqSection">Часто задаваемые вопросы</h2>
                 <ul class="faq__questions-list">
                     <li class="faq__questions-item">
                         <button class="faq__questions-button">
@@ -242,7 +242,7 @@
         </section>
         <section class="contacts__section">
             <div class="container contacts__container">
-                <h2 class="h2-style contacts__h2 h2-style--blue">Контакты</h2>
+                <h2 class="h2-style contacts__h2 h2-style--blue" id="contactsSection">Контакты</h2>
                 <a href="" class="button-style contacts__button--order">Заказать проект</a>
                 <ul class="contacts__list">
                     <li class="contacts__item">
